--- a/routerparttwo/package.json
+++ b/routerparttwo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.21",
+    "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
