--- a/routerparttwo/package.json
+++ b/routerparttwo/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^8.5.0",
     "vue": "^3.4.21",
     "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.3.0"
