--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,34 @@
 aiohttp==3.9.5
+aiosignal==1.3.1
 asgiref==3.7.2
+attrs==23.2.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.7
+Deprecated==1.2.14
 Django==5.0.2
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+frozenlist==1.4.1
 idna==3.6
 joblib==1.4.0
+multidict==6.0.5
 nltk==3.8.1
 numpy==1.26.4
+pycparser==2.22
+PyJWT==2.8.0
+PyNaCl==1.5.0
 pytz==2024.1
 regex==2024.4.16
 requests==2.31.0
 sqlparse==0.4.4
+textblob==0.18.0.post0
 tqdm==4.66.2
+typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
-textblob==0.18.0.post0
-PyGithub==2.3.0
+wrapt==1.16.0
+yarl==1.9.4
