--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^8.5.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.3.0"
