--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==42.0.7
 Deprecated==1.2.14
 Django==5.0.2
 django-cors-headers==4.3.1
+django-crontab==0.7.1
 djangorestframework==3.14.0
 frozenlist==1.4.1
 idna==3.6
