--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vuepic/vue-datepicker": "^8.5.0",
     "chart.js": "^4.4.3",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-grid-layout": "^2.4.0",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
