--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.3",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
+    "vue-button-spinner": "^2.2.1",
     "vue-chartjs": "^5.3.1",
     "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.3.0",
