--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==42.0.7
-dateutil==2.9.0
+python-dateutil==2.9.0
 Deprecated==1.2.14
 Django==5.0.2
 django-cors-headers==4.3.1
