--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==42.0.7
-python-dateutil==2.9.0
 Deprecated==1.2.14
 Django==5.0.2
 django-cors-headers==4.3.1
@@ -24,9 +23,12 @@ pycparser==2.22
 PyGithub==2.3.0
 PyJWT==2.8.0
 PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 regex==2024.4.16
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 textblob==0.18.0.post0
 tqdm==4.66.2
